services/rabbitmq/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-service
  labels:
    app: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - port: 5672   # RabbitMQ port
      targetPort: 5672  # RabbitMQ container port
