services/rabbitmq/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
spec:
  ingressClassName: azure-application-gateway
  tls:
    - secretName: ingress-ssl
  rules:
    - host: rabbitmq-dev.trackwizz.app  # Update with your desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-clusterip-service  # Update with your RabbitMQ service name
                port:
                  number: 5672  # RabbitMQ port
